--- a/examples/dev/numeric.html
+++ b/examples/dev/numeric.html
@@ -64,6 +64,7 @@
 					rules.comma()
 				]
 			});
+			guard.setValue("123");
 			const el = guard.getDisplayElement();
 
 			function renderState() {
